tests/test103.rael
loop :232 through {
    log :232
}